ss3d-server-browser-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ss3d-server-browser-server
spec:
  selector:
    app: ss3d-server-browser
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
